--- a/public/index.html
+++ b/public/index.html
@@ -40,13 +40,13 @@
     
     <hr/> 
     <div class="test-title">RENDER TEST</div>
-    <div id="RenderEx"></div>
+    <div id="ExampleRender"></div>
     <hr/> 
     <div class="test-title">PROPS TEST</div>
-    <div id="PropsTest"></div>
+    <div id="ExampleProps"></div>
     <hr/> 
     <div class="test-title">COUNTER TEST</div>
-    <div id="CountTest"></div>
+    <div id="ExampleCount"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
