--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,14 @@
     <div class="test-title">PROPS TEST</div>
     <div id="ExampleProps"></div>
     <hr/> 
-    <div class="test-title">COUNTER TEST</div>
-    <div id="ExampleCount"></div>
+    <div class="test-title">STATE TEST</div>
+    <div id="ExampleState"></div>
+    <hr/>
+    <div class="test-title">STATE TEST2</div>
+    <div id="ExampleState2"></div>
+    1. class fields
+    2. constructor
+    <hr/>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
