--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,8 @@
     1. class fields
     2. constructor
     <hr/>
+    <div class="test-title">FORM TEST</div>
+    <div id="ExampleForm"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
